--- a/JavaScript Ajax/index.html
+++ b/JavaScript Ajax/index.html
@@ -12,16 +12,16 @@
     <button id="btn">按我读取新闻</button>
     <ul id="list"></ul>
     <script>
-        // 获取标签
+        // 得到按钮和列表
         var btn = document.getElementById('btn');
         var list = document.getElementById('list');
-
         btn.onclick = function () {
             var xhr = new XMLHttpRequest();
             xhr.onreadystatechange = function () {
                 if (xhr.readyState == 4) {
                     if (typeof xhr.responseText == 'string') {
                         var arr = JSON.parse(xhr.responseText);
+                        console.log(arr);
                         for (var i = 0; i < arr.length; i++) {
                             var li = document.createElement('li');
                             li.innerHTML = arr[i].title;
