--- a/4post/index.html
+++ b/4post/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- 一般来说表单提交用POST请求 -->
     <form action="tijiao.php" method="POST">
         <p>
             你的姓名：
