--- a/6jQuery Ajax/index.html
+++ b/6jQuery Ajax/index.html
@@ -8,14 +8,16 @@
 </head>
 
 <body>
-    <h1>杉姐的幸福小屋</h1>
-    <button id="btn">按我读取新闻</button>
+    <h1>欢迎来到杉姐的新闻小站</h1>
+    <button id="btn">点击获取新闻资讯</button>
     <ul id="list"></ul>
 
     <script src="https://cdn.bootcss.com/jquery/3.5.0/jquery.min.js"></script>
     <script>
         $('#btn').click(function () {
+            // Ajax在jQuery中封装的特别好，不用写XMLHttpRequest了
             $.get('jiekou.php', function (data) {
+                // 回调函数
                 var arr = JSON.parse(data);
                 for (var i = 0; i < arr.length; i++) {
                     $('<li>' + arr[i].title + '</li>').appendTo('#list');
